Datos de paginas en JSON Servicio que captura datos locales Header y footer actualizados con datos del servicio Animacion en los datos de las paginas about y portfolio Interface para datos de paginas

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,26 +6,40 @@
           </li>
           <li class="rk-menu__item"><a href="documentation.html" class="rk-menu__link">Docs</a>
           </li>
-          <li class="rk-menu__item"><a href="contact.html" class="rk-menu__link">Contact</a>
+          <li class="rk-menu__item" routerLinkActive="active"><a routerLink="/contact" class="rk-menu__link">Contact</a>
           </li>
         </ul>
         <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">{{ anioActual }} ESHOP </span>All Right Reserved.</p>
       </div>
-      <div class="ae-grid__item item-lg-4 au-xs-ta-center"><a href="#0" class="rk-social-btn ">
+      <div class="ae-grid__item item-lg-4 au-xs-ta-center">
+        <a [href]="pageInfoService.info.facebook" target="_blank" class="rk-social-btn ">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-facebook"></use>
-          </svg></a><a href="#0" class="rk-social-btn ">
+          </svg>
+        </a>
+        <a [href]="pageInfoService.info.twitter" target="_blank" class="rk-social-btn ">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-twitter"></use>
-          </svg></a><a href="#0" class="rk-social-btn ">
+          </svg>
+        </a>
+        <a [href]="pageInfoService.info.pinterest" target="_blank" class="rk-social-btn ">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-pinterest"></use>
-          </svg></a><a href="#0" class="rk-social-btn ">
+          </svg>
+        </a>
+        <a [href]="pageInfoService.info.tumblr" target="_blank" class="rk-social-btn ">
           <svg>
             <use xlink:href="assets/img/symbols.svg#icon-tumblr"></use>
-          </svg></a></div>
+          </svg>
+        </a>
+      </div>
       <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right">
-        <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a href="#0" class="rk-dark-color ">contact@eshop.com </a></span></p>
+        <p class="rk-footer__text rk-footer__contact "> 
+          <span class="ae-u-bold">Email: </span>
+          <span class="ae-u-bolder">
+            <a href="mailto:{{pageInfoService.info.email}}" class="rk-dark-color ">{{ pageInfoService.info.email }}</a>
+          </span>
+        </p>
         <p class="rk-footer__text rk-footer__by">Theme by <a href="http://pixeden.com" class="ae-u-bolder">Pixeden.</a></p>
       </div>
     </div>
