--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -1,7 +1,7 @@
 <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">  
   <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
     
-    <a href="portfolio-item.html" class="rk-item ae-masonry__item">
+    <a href="portfolio-item.html" class="rk-item ae-masonry__item animate__animated animate__fadeIn">
       <img src="assets/img/project-1.jpg" alt="">
       <div class="item-meta">
         <h2>Essential Stationery</h2>
