--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -28,9 +28,9 @@
   
   <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4" *ngIf="!productsService.cargando">
     
-    <a routerLink="/portfolio-item" 
-       class="rk-item ae-masonry__item animate__animated animate__fadeIn"
-       *ngFor="let producto of productos">
+    <a class="rk-item ae-masonry__item animate__animated animate__fadeIn link"
+       *ngFor="let producto of productos"
+       (click)="cargarItem( producto.cod )">
       <img src="assets/productos/{{ producto.url }}.jpg" alt="">
       <div class="item-meta">
         <h2>{{ producto.titulo }}</h2>
