Ajuste a routing de items de portafolio y busqueda de items Reutilizacion de componentes de items para portafolio y busqueda

--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,13 +1,1 @@
-<div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
-    
-    <a class="rk-item ae-masonry__item animate__animated animate__fadeIn link"
-       *ngFor="let producto of productos"
-       (click)="cargarItem( producto.cod )">
-      <img src="assets/productos/{{ producto.url }}.jpg" alt="">
-      <div class="item-meta">
-        <h2>{{ producto.titulo }}</h2>
-        <p>{{ producto.categoria }}</p>
-      </div>
-    </a>
-    
-</div>
+<app-product-list [products]="productos" [loading]="productsService.cargando"></app-product-list>
